Intermittent browser/base/content/test/plugins/browser_pluginCrashCommentAndURL.js | The crash UI should be visible - false == true - got false, expected true (operator ==)
Categories
(Core Graveyard :: Plug-ins, defect, P5)
Tracking
(firefox78 fixed)
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: gsvelto)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [retriggered][stockwell disable-recommended])
Attachments
(1 file)
Filed by: nerli [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=296802494&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/fmlPQD1jT3KG1w8HyX7maA/runs/0/artifacts/public/logs/live_backing.log
[task 2020-04-08T13:43:27.756Z] 13:43:27 INFO - TEST-START | browser/base/content/test/plugins/browser_pluginCrashCommentAndURL.js
[task 2020-04-08T13:43:27.775Z] 13:43:27 INFO - GECKO(6716) | [Child 5064: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 00000137BFF2E000 == 3 [pid = 5064] [id = {56e3ade0-6967-4570-9206-d7c3d81015b5}]
[task 2020-04-08T13:43:27.775Z] 13:43:27 INFO - GECKO(6716) | [Child 5064: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 28 (00000137C5EE53C0) [pid = 5064] [serial = 104] [outer = 0000000000000000]
[task 2020-04-08T13:43:27.775Z] 13:43:27 INFO - GECKO(6716) | [Child 5064: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 29 (00000137BFFA3800) [pid = 5064] [serial = 105] [outer = 00000137C5EE53C0]
[task 2020-04-08T13:43:27.793Z] 13:43:27 INFO - GECKO(6716) | [Child 5064: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 30 (00000137C67A2400) [pid = 5064] [serial = 106] [outer = 00000137C5EE53C0]
[task 2020-04-08T13:43:27.884Z] 13:43:27 INFO - GECKO(6716) | hostRecordType: 0
[task 2020-04-08T13:43:27.910Z] 13:43:27 INFO - GECKO(6716) | [Child 5064: Main Thread]: I/DocShellAndDOMWindowLeak ++DOMWINDOW == 31 (00000137C67D4C00) [pid = 5064] [serial = 107] [outer = 00000137C5EE53C0]
[task 2020-04-08T13:43:27.932Z] 13:43:27 INFO - GECKO(6716) | [Parent 4040, Main Thread] WARNING: '!mName', file /builds/worker/checkouts/gecko/editor/libeditor/EditAggregateTransaction.cpp, line 92
[task 2020-04-08T13:43:27.933Z] 13:43:27 INFO - GECKO(6716) | [Parent 4040, Main Thread] WARNING: EditAggregationTransaction::GetName() failed: 'NS_SUCCEEDED(rv)', file /builds/worker/checkouts/gecko/editor/libeditor/PlaceholderTransaction.cpp, line 217
[task 2020-04-08T13:43:27.933Z] 13:43:27 INFO - GECKO(6716) | [Parent 4040, Main Thread] WARNING: nsIAbsorbingTransaction::GetTxnName() failed, but ignored: 'NS_SUCCEEDED(rvIgnored)', file /builds/worker/checkouts/gecko/editor/libeditor/PlaceholderTransaction.cpp, line 188
[task 2020-04-08T13:43:27.933Z] 13:43:27 INFO - GECKO(6716) | For application/x-test found plugin nptest.dll
[task 2020-04-08T13:43:27.943Z] 13:43:27 INFO - GECKO(6716) | XPCOM_MEM_BLOAT_LOG: c:\users\task_1586352835\appdata\local\temp\tmpjigbk5.mozrunner\runtests_leaks.log
[task 2020-04-08T13:43:27.943Z] 13:43:27 INFO - GECKO(6716) | Writing to log: c:\users\task_1586352835\appdata\local\temp\tmpjigbk5.mozrunner\runtests_leaks_plugin_pid6176.log
[task 2020-04-08T13:43:28.176Z] 13:43:28 INFO - GECKO(6716) | ###!!! [Parent][MessageChannel::Call] Error: Channel error: cannot send/recv
[task 2020-04-08T13:43:28.176Z] 13:43:28 INFO - GECKO(6716) | [Child 5064, Main Thread] WARNING: Failed to send message!: file /builds/worker/checkouts/gecko/dom/plugins/ipc/PluginScriptableObjectParent.cpp, line 248
[task 2020-04-08T13:43:28.176Z] 13:43:28 INFO - GECKO(6716) | [Parent 4040, Main Thread] WARNING: [PluginModuleParent::ActorDestroy] abnormal shutdown without minidump!: file /builds/worker/checkouts/gecko/dom/plugins/ipc/PluginModuleParent.cpp, line 1336
[task 2020-04-08T13:43:28.176Z] 13:43:28 INFO - GECKO(6716) | [Parent 4040, Main Thread] WARNING: '!aObserver', file /builds/worker/checkouts/gecko/xpcom/ds/nsObserverService.cpp, line 237
[task 2020-04-08T13:43:28.176Z] 13:43:28 INFO - GECKO(6716) | ###!!! [Parent][MessageChannel] Error: (msgtype=0x6F001E,name=PPluginInstance::Msg_AsyncSetWindow) Channel error: cannot send/recv
[task 2020-04-08T13:43:28.200Z] 13:43:28 INFO - GECKO(6716) | [Child 5064, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /builds/worker/checkouts/gecko/dom/base/nsContentUtils.cpp, line 3758
[task 2020-04-08T13:43:28.232Z] 13:43:28 INFO - TEST-INFO | started process screenshot
[task 2020-04-08T13:43:28.331Z] 13:43:28 INFO - TEST-INFO | screenshot: exit 0
[task 2020-04-08T13:43:28.331Z] 13:43:28 INFO - Buffered messages logged at 13:43:27
[task 2020-04-08T13:43:28.331Z] 13:43:28 INFO - Entering test bound
[task 2020-04-08T13:43:28.331Z] 13:43:28 INFO - Leaving test bound
[task 2020-04-08T13:43:28.331Z] 13:43:28 INFO - Entering test bound
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - Wait tab event: load
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - Tab event received: load
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - Buffered messages finished
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - TEST-UNEXPECTED-FAIL | browser/base/content/test/plugins/browser_pluginCrashCommentAndURL.js | The crash UI should be visible - false == true - got false, expected true (operator ==)
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - Stack trace:
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - @chrome://mochitests/content/browser/browser/base/content/test/plugins/browser_pluginCrashCommentAndURL.js:88:12
[task 2020-04-08T13:43:28.332Z] 13:43:28 INFO - execute@resource://specialpowers/SpecialPowersSandbox.jsm:140:12
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - _spawnTask@resource://specialpowers/SpecialPowersChild.jsm:1729:15
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - receiveMessage@resource://specialpowers/SpecialPowersChild.jsm:281:21
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - JSWindowActor queryreceiveMessage@resource://specialpowers/SpecialPowersParent.jsm:1063:12
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - JSWindowActor queryspawn@resource://specialpowers/SpecialPowersChild.jsm:1684:17
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - @chrome://mochitests/content/browser/browser/base/content/test/plugins/browser_pluginCrashCommentAndURL.js:74:23
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - AsyncTester_execTest/<@chrome://mochikit/content/browser-test.js:1062:34
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - asyncTester_execTest@chrome://mochikit/content/browser-test.js:1097:11
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - nextTest/<@chrome://mochikit/content/browser-test.js:925:14
[task 2020-04-08T13:43:28.333Z] 13:43:28 INFO - SimpleTest.waitForFocus/waitForFocusInner/focusedOrLoaded/<@chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:918:23
[task 2020-04-08T13:43:29.033Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 19 (0000014B752F0800) [pid = 9544] [serial = 35] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.033Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 18 (0000014B752ED400) [pid = 9544] [serial = 27] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.033Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 17 (0000014B752E7800) [pid = 9544] [serial = 32] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.051Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0000014B752E8000 == 4 [pid = 9544] [id = {e1ef51ab-9b71-4aee-8188-15183972696a}] [url = about:blank]
[task 2020-04-08T13:43:29.051Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0000014B752E7400 == 3 [pid = 9544] [id = {8b9bae72-d74b-49d8-9449-1cb1770d138a}] [url = http://example.com/]
[task 2020-04-08T13:43:29.051Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0000014B6EC4E400 == 2 [pid = 9544] [id = {8205954b-fdaa-4b45-a494-263e451295a2}] [url = about:blank]
[task 2020-04-08T13:43:29.051Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 0000014B7764D800 == 1 [pid = 9544] [id = {17f6f57d-42fd-462a-8aae-191a1aac9214}] [url = http://example.com/]
[task 2020-04-08T13:43:29.093Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 16 (0000014B74EE1AC0) [pid = 9544] [serial = 31] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.093Z] 13:43:29 INFO - GECKO(6716) | [Child 9544: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 15 (0000014B76B57740) [pid = 9544] [serial = 28] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.559Z] 13:43:29 INFO - GECKO(6716) | [Parent 4040: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 11 (0000029031A84C00) [pid = 4040] [serial = 15] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:29.559Z] 13:43:29 INFO - GECKO(6716) | [Parent 4040: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 10 (000002902B7BA000) [pid = 4040] [serial = 19] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 16 (000001E643CFB400) [pid = 8184] [serial = 37] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 15 (000001E6438B5C00) [pid = 8184] [serial = 34] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 14 (000001E643CFB000) [pid = 8184] [serial = 45] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 13 (000001E643CEF400) [pid = 8184] [serial = 41] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 12 (000001E648167400) [pid = 8184] [serial = 49] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 11 (000001E648170C00) [pid = 8184] [serial = 46] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.268Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 10 (000001E643DAEC00) [pid = 8184] [serial = 42] [outer = 0000000000000000] [url = about:blank]
[task 2020-04-08T13:43:30.269Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 000001E643DB4400 == 1 [pid = 8184] [id = {95a56f6d-05f9-4ded-b741-a134148d8b5b}] [url = about:blank]
[task 2020-04-08T13:43:30.269Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 000001E6438B6000 == 0 [pid = 8184] [id = {92104892-bff3-4dd4-bb21-259d07151251}] [url = about:blank]
[task 2020-04-08T13:43:30.308Z] 13:43:30 INFO - GECKO(6716) | [Child 8184: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 9 (000001E6438E43C0) [pid = 8184] [serial = 38] [outer = 0000000000000000] [url = about:blank]
Comment 1•5 years ago
|
||
Gabriele, could this fail be triggered from the changes in Bug 1614933?
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 3•5 years ago
|
||
Yes, it could be. I'll try to have a look tomorrow. Leaving the NI? for now.
Comment hidden (Intermittent Failures Robot) |
Comment hidden (Intermittent Failures Robot) |
Comment 6•5 years ago
|
||
This bug has 71 failures in the last 7 days on windows10-64-qr, windows7-32, windows7-32-shippable platforms, opt and debug build type.
Recent failure log:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=298850227&repo=autoland&lineNumber=4339
Jim, can you please take a look at this?
Assignee | ||
Comment 7•5 years ago
|
||
I have to fix this and I don't think it's a terribly hard fix, but I'm struggling to find the time to do it.
Comment hidden (Intermittent Failures Robot) |
![]() |
||
Updated•5 years ago
|
Comment 9•5 years ago
|
||
Over the last 7 days there are 41 failures present on this bug. These happen on windows10-64-qr, windows7-32 and windows7-32-shippable.
Here is the latest failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=300204861&repo=autoland&lineNumber=5765
Assignee | ||
Comment 10•5 years ago
|
||
This should be fixed by the patch I landed yesterday night in bug 1498706. Let's see if the volume declines, if it does not I'll have another look.
Assignee | ||
Comment 11•5 years ago
|
||
This is still happening so it's a different issue. Taking this.
Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Assignee | ||
Comment 13•5 years ago
|
||
From the looks of it we're failing to write out the minidump for the plugin process. Given the timing and that it seems to be happening only on Windows then bug 1614933 is most definitely what regressed this. There was some more fallout from that bug and none of the other issues I fixed were causing the minidump not to be written. It's possibly that this is a race in the exception handler so I'll try following that lead while investigating this.
Updated•5 years ago
|
Assignee | ||
Comment 14•5 years ago
|
||
I managed to reproduce the race by manually injecting a delay in the exception handler. This looks like it's caused by bug 1624467 which I thought was Linux only but it's not.
Assignee | ||
Comment 15•5 years ago
|
||
Assignee | ||
Comment 16•5 years ago
|
||
It seems that my patch fixes the problem: https://treeherder.mozilla.org/#/jobs?repo=try&revision=2157f186deab1a61116b647044cdb4c65bc01484
However I have to adapt it for Linux and macOS too before asking for review.
Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Comment 18•5 years ago
|
||
Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3
(Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3
(normal.)
Updated•5 years ago
|
Comment hidden (Intermittent Failures Robot) |
Comment 20•5 years ago
|
||
Comment 21•5 years ago
|
||
bugherder |
Assignee | ||
Comment 23•5 years ago
|
||
Failure rate dropped to 0 on the 19th, this looks fixed for good.
Comment hidden (Intermittent Failures Robot) |
![]() |
||
Updated•5 years ago
|
Updated•3 years ago
|
Description
•