toolkit/crashreporter/breakpad-client/linux/crash_generation/crash_generation_server.cc
@@ -273,15 +273,18 @@ CrashGenerationServer::ClientEvent(short revents)
     return true;
   }
 
+  ClientInfo info(crashing_pid, this);
   if (dump_callback_) {
-    ClientInfo info(crashing_pid, this);
-
     dump_callback_(dump_context_, info, minidump_filename);
   }
 
   // Send the done signal to the process: it can exit now.
   // (Closing this will make the child's sys_read unblock and return 0.)
   close(signal_fd);
+
+  if (exit_callback_) {
+    exit_callback_(exit_context_, info);
+  }
 
   return true;
 }
